--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 .App {
   text-align: center;
 }
@@ -11,6 +13,14 @@
   .App-logo {
     animation: App-logo-float infinite 3s ease-in-out;
   }
+}
+
+.username {
+  position: absolute;
+  right: 50px;
+}
+
+.nav-bar {
 }
 
 .App-header {
